--- a/src/app/todolist-component/todolist-component.component.html
+++ b/src/app/todolist-component/todolist-component.component.html
@@ -1,6 +1,6 @@
 <h2>{{parentData}}</h2>
     <ul>
-      <li *ngFor="let todoItem of todoList;let i = index;"> {{todoItem.title}} {{todoItem.date }}
+      <li *ngFor="let todoItem of todoList;let i = index;"> {{todoItem.title}} - {{todoItem.date }}
         <button class="btn btn-red" (click)="deleteTodo(i)">
           X
         </button>
